// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTables should respond with rows when db is valid 1`] = `
"  
    CREATE TABLE IF NOT EXISTS Mentors ( 
        user_id int NOT NULL UNIQUE,
        first_name varchar(255) NOT NULL,
        last_name varchar(255) NOT NULL,
        email_address varchar(255) NOT NULL UNIQUE,
        biography varchar(255),
        zipcode varchar(5) NOT NULL,
        date_of_birth DATE NOT NULL,
        profession varchar(255) NOT NULL,
        skills varchar(255) NOT NULL,
        profile_pic_URL varchar(255) NOT NULL,
        hobbies varchar(255)
    );"
`;

exports[`createTables should respond with rows when db is valid 2`] = `
"    
        CREATE TABLE IF NOT EXISTS Mentees (
            user_id int NOT NULL UNIQUE,
            first_name varchar(255) NOT NULL,
            last_name varchar(255) NOT NULL,
            email_address varchar(255) NOT NULL UNIQUE,
            biography varchar(255),
            zipcode varchar(5) NOT NULL,
            date_of_birth DATE NOT NULL,
            skills varchar(255) NOT NULL,
            profile_pic_URL varchar(255) NOT NULL,
            hobbies varchar(255)
        );"
`;

exports[`createTables should respond with rows when db is valid 3`] = `
"  
    CREATE TABLE IF NOT EXISTS Passwords ( 
        user_id int NOT NULL UNIQUE,
        email_address varchar(255) NOT NULL UNIQUE,
        password varchar(255) 
    );"
`;

exports[`createTables should respond with rows when db is valid 4`] = `
"
    CREATE TABLE IF NOT EXISTS Matches (
        match_id int NOT NULL UNIQUE,
        mentor_id int NOT NULL,
        mentee_id int NOT NULL
    );"
`;
